Remove fixed header to avoid problems on iOS

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -75,7 +75,7 @@ div.fullscreen-topic {
       }
 
       div.fullscreen-topic-mobile-navigation{
-        position: fixed;
+        position: absolute;
         top: 0px;
         left: 0px;
         height: #{$mobile_navbar_height}px;
